Logo added and edited. Footer spacing issue fixed.

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  overflow-y: scroll;
 }
 
 #root {
@@ -25,7 +26,6 @@ html {
   background-color: #000; 
 }
 
-
 * {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
@@ -34,7 +34,6 @@ html {
   -ms-user-select: none;
   user-select: none;
 }
-
 
 input, 
 textarea, 
@@ -45,7 +44,6 @@ textarea,
   user-select: text;
 }
 
-
 input[type="text"],
 input[type="email"],
 input[type="tel"],
@@ -55,21 +53,33 @@ textarea {
   font-size: 16px !important;
 }
 
-
 body {
   position: relative;
   overflow-x: hidden !important;
-  width: 100vw;
+  width: 100%;
   max-width: 100%;
 }
 
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
 
 @media (max-width: 768px) {
   html {
     scroll-behavior: smooth;
   }
   
- 
   * {
     max-width: 100vw;
   }
